--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.1.0"
+    "gulp-clean": "^0.4.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-twig": "^1.2.0",
+    "install": "^0.13.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.3"
