--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
+    "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.1.0",
     "gulp-twig": "^1.2.0",
     "install": "^0.13.0"
